Arranged user section headings

--- a/index.html
+++ b/index.html
@@ -56,15 +56,27 @@ layout: default
     </ul>
 
 
-    <p>
-        <h1>For Lab Users</h1>
-        <h2>A complete lab overview</h2>
-        <h2>Common networking</h2>
-        <h2>Interactive documentation</h2>
-        <h2>Scripting and Discovery</h2>
-        <h2>Visual programming</h2>
-        <h2>Events and data broadcasting</h2>
-    </p>
+    <h1>For Lab Users</h1>
+    <ul class="list">
+        <li class="home-item list-item">
+            <h2>A complete lab overview</h2>
+        </li>
+        <li class="home-item list-item">
+            <h2>Common networking</h2>
+        </li>
+        <li class="home-item list-item">
+            <h2>Interactive documentation</h2>
+        </li>
+        <li class="home-item list-item">
+            <h2>Scripting and Discovery</h2>
+        </li>
+        <li class="home-item list-item">
+            <h2>Visual programming</h2>
+        </li>
+        <li class="home-item list-item">
+            <h2>Events and data broadcasting</h2>
+        </li>
+    </ul>
 
 </div>
 
