Added user content

--- a/index.html
+++ b/index.html
@@ -71,22 +71,48 @@ layout: default
     <h1>For Lab Users</h1>
     <ul class="list">
         <li class="home-item list-item">
-            <h2>A complete lab overview</h2>
+            <h2>A complete lab overview <i>(soon)</i></h2>
+            <div class="home-item-p-large">
+                <p>Manage your entire lab from a simple overview. LabThings links together devices into an intelligently managed web.</p>
+                <p>Pause and resume experiments for warnings, quickly start up your lab, get notified ot key events, and more.</p>
+            </div>
+            <img src="{{site.baseurl}}/assets/images/homethumbs/overview_curves.svg"></img>
+        </li>
+        <li class="home-item list-item">
+            <h2>Modern manuals</h2>
+            <div class="home-item-p-large">
+                <p>Using a device can be the best way to understand it.</p>
+                <p>LabThings automatically builds standard interactive documentation, allowing users to quickly interact with devices with zero code.</p>
+            </div>
+            <img src="{{site.baseurl}}/assets/images/homethumbs/docs_curves.svg"></img>
         </li>
         <li class="home-item list-item">
             <h2>Common networking</h2>
+            <div class="home-item-p-small">
+                <p>Connect your lab using high availability, low-cost networking equipment. No proprietary connections.</p>
+                <p>IP networking provides a robust, globally available communication backbone, and can be extended to any scale.</p>
+            </div>
         </li>
         <li class="home-item list-item">
-            <h2>Interactive documentation</h2>
+            <h2>Scripting and Discovery <i>(soon)</i></h2>
+            <div class="home-item-p-large">
+                <p>Simple client libraries allow easy instrument control and experiment scripting. LabThings Descriptions allow all device functionality to be easily used from any language.</p>
+                <p>Devices announce themselves to the network, so connecting is simple and fast.</p>
+            </div>
         </li>
         <li class="home-item list-item">
-            <h2>Scripting and Discovery</h2>
+            <h2>Visual programming <i>(soon)</i></h2>
+            <div class="home-item-p-large">
+                <p><a href="https://developers.google.com/blockly">Blockly</a> provides a visual programming environment for Python that can be used to build simple LabThings experiments with zero programming experience.</p>
+                <p>The generated code can easily be converted into Python scripts if you need extra functionality.</p>
+            </div>
         </li>
         <li class="home-item list-item">
-            <h2>Visual programming</h2>
-        </li>
-        <li class="home-item list-item">
-            <h2>Events and data broadcasting</h2>
+            <h2>Events and data broadcasting <i>(soon)</i></h2>
+            <div class="home-item-p-large">
+                <p>By broadcasting key events like warnings, errors, and changes in state, devices can be easily monitored and lined. Experiments can pause on warnings, and automatically resume.</p>
+                <p>Collected data can be announced to the network, enablind automatic local backup of all experimental data from across the lab.</p>
+            </div>
         </li>
     </ul>
 
